--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <input type="number" name="qty" id="qty">
         <button id="btnMine">Place Mine</button>
     </form>
-    <table id="field">
-
-    </table>
+    <table id="field"></table>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
